[gd_scene load_steps=30 format=3 uid="uid://5hhqv1ty5cr2"]

[ext_resource type="Script" path="res://objects/player.gd" id="1_1uga2"]
[ext_resource type="Texture2D" uid="uid://d5gw5bael405" path="res://icon.svg" id="1_nn3tg"]
[ext_resource type="Texture2D" uid="uid://ctfpdlxbeg7qt" path="res://assets/player.png" id="3_po0rm"]
[ext_resource type="Texture2D" uid="uid://bcdn0nr08p5lv" path="res://assets/doesnt do anything.png" id="4_sh4il"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0w82"]
size = Vector2(5.33333, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_be2is"]
atlas = ExtResource("3_po0rm")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggl7j"]
atlas = ExtResource("3_po0rm")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yimkf"]
atlas = ExtResource("3_po0rm")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xmbg"]
atlas = ExtResource("3_po0rm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bfcg"]
atlas = ExtResource("3_po0rm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pgtm"]
atlas = ExtResource("3_po0rm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s582h"]
atlas = ExtResource("3_po0rm")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c8rn"]
atlas = ExtResource("3_po0rm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2bm8"]
atlas = ExtResource("3_po0rm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxh14"]
atlas = ExtResource("3_po0rm")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etdcj"]
atlas = ExtResource("3_po0rm")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm1q6"]
atlas = ExtResource("3_po0rm")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc7da"]
atlas = ExtResource("3_po0rm")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddhjv"]
atlas = ExtResource("3_po0rm")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gptvl"]
atlas = ExtResource("3_po0rm")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wkbn"]
atlas = ExtResource("3_po0rm")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r41vj"]
atlas = ExtResource("3_po0rm")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjckk"]
atlas = ExtResource("3_po0rm")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q60ql"]
atlas = ExtResource("3_po0rm")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4r16"]
atlas = ExtResource("3_po0rm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwr4t"]
atlas = ExtResource("3_po0rm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqoq7"]
atlas = ExtResource("3_po0rm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y1w2h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_be2is")
}],
"loop": false,
"name": &"blow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggl7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yimkf")
}],
"loop": true,
"name": &"breathe",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_nn3tg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_sh4il")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xmbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bfcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pgtm")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s582h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c8rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2bm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxh14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etdcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm1q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc7da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddhjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gptvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wkbn")
}],
"loop": true,
"name": &"spin",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r41vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjckk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q60ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4r16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwr4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqoq7")
}],
"loop": false,
"name": &"turn",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_beq50"]
size = Vector2(64, 239)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 0
script = ExtResource("1_1uga2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_f0w82")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y1w2h")
animation = &"full"

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -53.0
offset_right = 20.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
text = "100%"

[node name="BlowArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlowArea"]
position = Vector2(0, -109.5)
shape = SubResource("RectangleShape2D_beq50")
disabled = true

[node name="BreathCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="BlowArea" to="." method="_on_blow_area_body_entered"]
[connection signal="timeout" from="BreathCooldown" to="." method="_on_breath_cooldown_timeout"]
